# GasStorageOptimization

./: .flake8  .gitignore  .mypy.ini  Dockerfile  MGS_export.xlsx  MGS_graph.html  MND_export.xlsx  MND_graph.html  Main.py  README.md  RWE_export.xlsx  RWE_graph.html  archiv.txt  azure-pipelines.yaml  gs_model_pyomo.ipynb  gs_oop.ipynb  main.py  prices.xlsx  pyproject.toml  tests.py  total_export.xlsx  total_graph.html
charts/gas-stor-opt/: Chart.yaml  values.yaml
charts/test-application/: Chart.yaml  values.yaml
export/: MGS_2023_11_08_13_20_37_584575_graph.html  MGS_2023_11_08_13_20_39_143641_graph.html  MGS_2023_11_08_13_20_40_682392_graph.html  MGS_2023_11_09_09_46_51_173194_graph.html  MGS_2023_11_20_09_29_00_474831_export.xlsx  MGS_2023_11_20_09_29_00_474831_graph.html  MGS_export.xlsx  MGS_graph.html  MND_2023_11_20_09_29_01_676731_export.xlsx  MND_2023_11_20_09_29_01_676731_graph.html  MND_export.xlsx  MND_graph.html  RWE_2023_11_20_09_29_01_881180_export.xlsx  RWE_2023_11_20_09_29_01_881180_graph.html  RWE_export.xlsx  RWE_graph.html  total_export.xlsx  total_graph.html
gas_tank/: gs_oop.ipynb  gs_optim.py  gs_optim_tools.py  prices.xlsx  utils.py
gas_tank/export/: MGS_2023_11_13_13_13_28_246507_export.xlsx  MGS_2023_11_13_13_13_28_246507_graph.html  MND_2023_11_13_13_13_29_559149_export.xlsx  MND_2023_11_13_13_13_29_559149_graph.html  RWE_2023_11_13_13_13_29_687842_export.xlsx  RWE_2023_11_13_13_13_29_687842_graph.html  total_export.xlsx  total_graph.html
gas_tank/pyscipopt/: scipopt.ipynb
julca/: gs_opt.jl
main/.streamlit/: config.toml
main/gas_tank/: gs_optim.py  utils.py
main/pages/: 2_Storages.py
pages/: 1_Prices.py  2_Storages.py  3_Optimize.py  4_Export.py  5_Graphs.py  Compute.py  Upload_prices.py
pipeline/templates/: build-docker-compose-job-poetry.yml  build-docker-job-poetry.yml  build-helm-job.yml  test-helm-job.yml  (+7 more)
save/: MND.pkl
sources/: prices.xlsx  zasobnik.json
src/: Main.py  config.py  ntb.ipynb  utils.py
tests/: test_storage_optimization.py
(+42 files in other folders)
