[tool.poetry]
name = "gas-optim"
version = "0.1.0"
description = ""
authors = ["juzun <zaplejtalja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyomo = "^6.6.2"
plotly = "^5.18.0"
numpy = "^1.26.1"
pandas = "^2.1.2"
streamlit = "^1.28.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
