[tool.poetry]
name = "gas-optim"
version = "0.1.0"
description = ""
authors = ["juzun <zaplejtalja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyomo = "^6.6.2"
plotly = "^5.18.0"
numpy = "^1.26.1"
pandas = "^2.1.2"
streamlit = "^1.28.1"
openpyxl = "^3.1.2"
highspy = "^1.5.3"
xlsxwriter = "^3.1.9"
nbformat = "^5.9.2"
cplex = {path = "//home/juzun/cplex/CPLEX_Studio/cplex/python/3.10/x86-64_linux"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
