[tool.poetry]
name = "gas-storage-optimization"
version = "0.1.1"
description = ""
authors = ["Jakub Zapletal <zaplejtalja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyomo = "^6.6.2"
plotly = "^5.18.0"
numpy = "^1.26.1"
pandas = "^2.1.2"
streamlit = "^1.28.1"
openpyxl = "^3.1.2"
xlsxwriter = "^3.1.9"
nbformat = "^5.9.2"
psutil = "^5.9.6"
blinker = "^1.7.0"
highspy = "^1.5.3"
flake8 = "^6.1.0"
black = "^23.12.1"
msal-streamlit-authentication = "^1.0.9"
logging = "^0.4.9.6"
requests = "^2.31.0"
azure-identity = "^1.15.0"
azure-keyvault = "^4.2.0"
pip-audit = "^2.7.0"
types-requests = "^2.31.0.20240106"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"